# word-z

./: .editorconfig  .gitignore  CMakeLists.txt  CMakeUserPresets.json  README.md  WordZ.aps
resources/: Resource.qrc  WordZ.aps  WordZ.rc  words.json
sql/: words.sql
src/: main.cpp  worddictionary.cpp  worddictionary.h  wordz.cpp  wordz.h  wordz.ui  wordzapplication.cpp  wordzapplication.h
tools/: tei2db.py
